# PiEEG-server

./: .dockerignore  .gitIgnore  .gitattributes  Dockerfile  README.md  TODO.md  fly.toml  install.sh  pyproject.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  stale-branches.yml  stale.yml
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
dashboard/src/: App.jsx  App.tsx  index.css  main.tsx  types.ts
dashboard/src/__tests__/p300/: decoder.test.ts  markerBus.test.ts  preprocessing.test.ts  timestampedRing.test.ts
dashboard/src/components/: AuthGate.jsx  AuthGate.tsx  ChannelCanvas.jsx  ChannelCanvas.tsx  ChannelDetailPanel.tsx  ChatPanel.tsx  CloudPanel.tsx  CloudTerms.tsx  ErrorBoundary.tsx  EventPanel.tsx  EventTimeline.tsx  ExperiencesPage.tsx  FilterPreview.tsx  PerformanceMonitor.jsx  RegisterPanel.tsx  SessionList.jsx  SessionLobby.tsx  SessionViewer.jsx  SessionViewer.tsx  ShortcutHelp.tsx  SpectralPanel.jsx  SpectralPanel.tsx  Spectrogram.tsx  StatsPanel.tsx  TopoMap.tsx  UpdateBanner.jsx  UpdateBanner.tsx  UpdatePage.tsx  WebcamFeed.tsx  WebhookPanel.tsx  XRWaveView.jsx  XRWaveView.tsx
dashboard/src/experiences/: registry.ts
dashboard/src/experiences/blink-scroll/: BlinkBrowser.tsx  blinkDetect.ts
dashboard/src/experiences/neural-sonification/: NeuralSonification.tsx  NeuralSynth.ts  useNeuralAudio.ts
dashboard/src/hooks/: useChat.ts  useCloud.ts  useEEG.js  useEEG.ts  useEventEngine.ts  useFFTWorker.js  useTheme.ts  useWebhookEvaluator.ts  useWebhooks.ts
dashboard/src/lib/: eventDetectors.ts  eventMerger.ts  webhookRecipes.ts
dashboard/src/workers/: eventWorker.ts  fftWorker.js  fftWorker.ts
doc/: .gitignore
doc/content/: index.mdx
doc/content/api/: data-format.mdx  websocket.mdx
doc/content/features/: dashboard.mdx  registers.mdx  server.mdx
doc/content/getting-started/: configuration.mdx  installation.mdx  quick-start.mdx
doc/content/integrations/: lsl.mdx
doc/content/reference/: architecture.mdx  troubleshooting.mdx
doc/public/: sw.js
pieeg_server/: __init__.py  __main__.py  _native.py  acquisition.py  auth.py  cloud_relay.py  dashboard.py  doctor.py  filters.py  hardware.py  ironbci.py  ironbci_32.py  mock.py  monitor.py  osc_vrchat.py  profiles.py  server.py  spike_filter.py  updater.py  webhooks.py
pieeg_server/static/: index.html
pieeg_server/static/dashboard/: index.html
scripts/: bench_native.py  build_release.sh  pre-commit
tests/: test_acquisition.py  test_filters.py  test_hardware_logic.py  test_integration.py  test_ironbci.py  test_mock.py  test_native_integration.py  test_profiles.py  test_spike_filter.py  test_webhooks.py
(+313 files in other folders)
