[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pieeg-server"
version = "0.1.0"
description = "One-command local streaming server for PiEEG-16 (16-channel EEG shield for Raspberry Pi)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PiEEG Community"},
]
keywords = ["eeg", "bci", "raspberry-pi", "pieeg", "neuroscience", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "spidev>=3.6",
    "gpiod>=1.5.4,<2.0",
    "websockets>=12.0",
    "scipy>=1.10",
]

[project.scripts]
pieeg-server = "pieeg_server.__main__:main"

[project.urls]
Homepage = "https://github.com/pieeg-club/PiEEG-16"
Documentation = "https://pieeg.com/docs/docs/pieeg-16/"
