[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pieeg-server"
version = "0.13.0"
description = "One-command local streaming server for PiEEG-16 (16-channel EEG shield for Raspberry Pi)"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "PiEEG Community"},
]
keywords = ["eeg", "bci", "raspberry-pi", "pieeg", "neuroscience", "websocket",
            "brain-computer-interface", "ads1299", "spi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
dependencies = [
    "websockets>=12.0",
    "scipy>=1.10",
    "rich>=13.0",
]

[project.optional-dependencies]
rpi = [
    "spidev>=3.6",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pieeg-server = "pieeg_server.__main__:main"

[project.urls]
Homepage = "https://github.com/yelabb/PiEEG-16-server"
Documentation = "https://pieeg.com/docs/docs/pieeg-16/"
Repository = "https://github.com/yelabb/PiEEG-16-server"
Issues = "https://github.com/yelabb/PiEEG-16-server/issues"

[tool.setuptools.packages.find]
include = ["pieeg_server*"]

[tool.setuptools.package-data]
pieeg_server = ["static/*", "static/dashboard/**/*"]
